# django-readonly-field

./: .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.rst  docker-compose.yml  requirements.txt  requirements_dev.txt  requirements_test.txt  runtests.py  setup.cfg  setup.py  tests_manage.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml  publish.yml
django_readonly_field/: __init__.py  apps.py  base.py  compiler.py
docs/: conf.py  django_readonly_field.rst  index.rst  installation.rst  modules.rst  usage.rst
tests/: manage.py  test_readonly.py
tests/readonly_app/: models.py  tests.py  views.py
tests/readonly_app/migrations/: 0001_initial.py  0002_sql_default.py
tests/readonly_project/: settings.py
