[metadata]
name = django-readonly-field
description = Make Django model fields readonly
author = PeopleDoc
author_email = peopledoc-python@ukg.com
url = https://github.com/peopledoc/django-readonly-field
long_description = file: README.rst
keywords = django posgresql read-only
license = MIT
classifiers =
        Intended Audience :: Developers
        License :: OSI Approved :: MIT License
        Development Status :: 5 - Production/Stable
        Framework :: Django
        Framework :: Django :: 2.2
        Framework :: Django :: 3.0
        Framework :: Django :: 3.1
        Framework :: Django :: 3.2
        Framework :: Django :: 4.0
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.7
        Programming Language :: Python :: 3.8
        Programming Language :: Python :: 3.9
        Programming Language :: Python :: 3.10

[options]
zip_safe = True
include_package_data = True
packages = find:
install_requires =
    Django

[options.extras_require]

dev =
    build
    dj_database_url
    flake8
    psycopg2
    pytest
    pytest-cov
    pytest-django
    requests
    sphinx
    tox
    twine

[isort]
profile = black

[flake8]
ignore = E501

[wheel]
universal = 1

[doc8]
max-line-length=88
ignore-path=docs/_build


[tool:pytest]
DJANGO_SETTINGS_MODULE = tests.readonly_project.settings
addopts =
    --cov-report term-missing --cov-branch --cov-report html --cov-report term
    --cov=django_readonly_field -vv --strict-markers -rfE -s
testpaths =
    tests/
filterwarnings =
    error
    ignore:.*distutils Version classes are deprecated.*:DeprecationWarning
